--- a/notebook/IndividualAnimalPhotoCount.ipynb
+++ b/notebook/IndividualAnimalPhotoCount.ipynb
@@ -6,9 +6,13 @@
     "collapsed": true
    },
    "source": [
-    "Script for counting the number of times an animal was photographed\n",
+    "Script for counting the number of times an animal was photographed, counting the number of contributor per photograph,\n",
+    "    average pics per contributor and for creating csv files and ploting the contributor/feature \n",
     "Author: Sreejith Menon\n",
-    "Date: May 25 2016"
+    "Date: May 25 2016\n",
+    "\n",
+    "Modified: Anthony Leon and Jose Hernandez\n",
+    "Date: July 14 2016 "
    ]
   },
   {
@@ -29,7 +33,8 @@
     "from collections import defaultdict\n",
     "import csv \n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pylab as p"
    ]
   },
   {
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -906,6 +911,117 @@
     "    plt.savefig(str(\"../\"+specific_feature+\"_expt2.png\") ,bbox_inches='tight')\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Arguments : csv_file \n",
+    "# Creates: csv file with Nid, Total\n",
+    "def totalNumberOfContrib(csv_file):\n",
+    "    NidContribTotal = numberPicsIndividualContributor('results.csv', False)\n",
+    "\n",
+    "    countUnique={}\n",
+    "    for (nid, contrib), total in NidContribTotal.items():\n",
+    "        countUnique[nid]=countUnique.get((nid), 0) + 1\n",
+    "        \n",
+    "    sortedcountUnique=sorted(countUnique.items(),key = operator.itemgetter(1), reverse=True)\n",
+    "    \n",
+    "    csv_out = csv.writer(open('NidNumberOfContrib.csv', 'w')) \n",
+    "    csv_out.writerow(['NID', 'Count'])\n",
+    "    for row in sortedcountUnique:\n",
+    "        csv_out.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Arguments : csv_file \n",
+    "# Creates: csv file with either Nid, Total or Nid, # of contributors\n",
+    "def TotalsGraph(filename):\n",
+    "    data=pd.read_csv(filename,  usecols=(0,1))\n",
+    "\n",
+    "    width = 0.10\n",
+    "    ind = np.arange(2056) + 0.15\n",
+    "\n",
+    "    plt.bar(ind,data.loc[:, 'Count'], width, color = 'r')\n",
+    "\n",
+    "    plt.xticks(ind,data.loc[:, 'NID'], rotation=90)\n",
+    "    plt.rcParams['xtick.labelsize'] = 1\n",
+    "    plt.xlabel('NID')\n",
+    "    \n",
+    "    if filename == 'NidTotal.csv':\n",
+    "        plt.ylabel('Total Photos Taken')\n",
+    "        plt.savefig(str(\"../NIDTotal_expt2.png\") ,bbox_inches='tight')\n",
+    "    else:\n",
+    "        plt.ylabel('Total Contributors')\n",
+    "        plt.savefig(str(\"../NIDContribTotal_expt2.png\") ,bbox_inches='tight')\n",
+    "    \n",
+    "    #plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Arguments : 2 csv_files\n",
+    "# Creates a merged csv file based on NID\n",
+    "def mergeTwoFiles(filename1, filename2):\n",
+    "    csv1 = pd.read_csv(filename1)\n",
+    "    csv2 = pd.read_csv(filename2)\n",
+    "    merged = csv1.merge(csv2, on = 'NID')\n",
+    "    merged.to_csv('output.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Arguments : csv_file\n",
+    "# Creates a PointGraph\n",
+    "def createCombinedPointGraph(filename):\n",
+    "    data=pd.read_csv(filename,  usecols=(0,1,2))\n",
+    "    width = 0.10\n",
+    "    ind = np.arange(2056) + 0.15\n",
+    "\n",
+    "    p1=p.plot(data.loc[:, 'Count_x'], marker='o', color='r')\n",
+    "    p2=p.plot(data.loc[:, 'Count_y'], marker='o', color = 'b')\n",
+    "\n",
+    "    p.legend((p1[0], p2[0]), ('NID Total', 'Number of Contributors'))\n",
+    "    p.xticks(ind,data.loc[:, 'NID'], rotation=90)\n",
+    "    p.rcParams['xtick.labelsize'] = 1\n",
+    "    p.ylabel('Total Photos Taken/ Total Number of Contributors')\n",
+    "    p.xlabel('NID')\n",
+    "\n",
+    "    #p.show()\n",
+    "    plt.savefig(str(\"../NIDandContributor_expt2.png\") ,bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
